--- a/index.html
+++ b/index.html
@@ -17,8 +17,24 @@
     <section>
 
         <div class="postcard">
-            <div class="postcard-header"></div>
-            <div class="postcard-body"></div>
+            <div class="postcard-header">
+            
+            <h1>My Postcard</h1>
+
+            </div>
+
+            <div class="postcard-body">
+                <div class="left-part">
+                    <p>Look how awesome! This is a postcard that I created using HTML5 and CSS3 during my 4Geeks Academy Course!</p>
+
+                    <p>This is so cool, can't wait to start doing more stuff!</p>
+                </div>
+                <div class="right-part">
+                    <input type="text" name="">
+                    <input type="text" name="">
+                    <input type="text" name="">
+                </div>
+            </div>
             <div class="postcard-footer"></div>
         </div>
     
