--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
         <div class="postcard">
             <div class="postcard-header">
-            
-            <h1>My Postcard</h1>
+                <img src="http://assets.breatheco.de/apis/img/images.php?blob&random&cat=icon&tags=4geeks,16">
+                <h1>My Postcard</h1>
 
             </div>
 
