--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div class="postcard">
             <div class="postcard-header">
-                <img src="http://assets.breatheco.de/apis/img/images.php?blob&random&cat=icon&tags=4geeks,16">
+                <img src="http://assets.breatheco.de/apis/img/images.php?blob&random&cat=icon&tags=4geeks,16"/>
                 <h1>My Postcard</h1>
 
             </div>
@@ -30,12 +30,14 @@
                     <p>This is so cool, can't wait to start doing more stuff!</p>
                 </div>
                 <div class="right-part">
-                    <input type="text" name="">
-                    <input type="text" name="">
-                    <input type="text" name="">
+                    <input type="text" name="" placeholder="Name"/>
+                    <input type="text" name="" placeholder="Email"/>
+                    <input type="text" name="" placeholder="Comment"/>
                 </div>
             </div>
-            <div class="postcard-footer"></div>
+            <div class="postcard-footer">
+                <input type="submit" name="Send My Postcard"/>
+            </div>
         </div>
     
     </section>
