--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <div class="postcard-footer">
-                <input type="submit" name="Send My Postcard"/>
+                <input type="submit" value="Send My Postcard"/>
             </div>
         </div>
     
