Adding form tag and including Formspree information

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section>
 
-        <div class="postcard">
+        <form class="postcard" action="http://formspree.io/josepadron370@gmail.com" method="post">
             <div class="postcard-header">
                 <img src="http://assets.breatheco.de/apis/img/images.php?blob&random&cat=icon&tags=4geeks,16"/>
                 <h1>My Postcard</h1>
@@ -31,15 +31,15 @@
                     <p>This is so cool, can't wait to start doing more stuff!</p>
                 </div>
                 <div class="right-part">
-                    <input type="text" name="" placeholder="Name"/>
-                    <input type="text" name="" placeholder="Email"/>
-                    <input type="text" name="" placeholder="Comment"/>
+                    <input type="text" name="fullname" placeholder="Name"/>
+                    <input type="text" name="email" placeholder="Email"/>
+                    <input type="text" name="message" placeholder="Comment"/>
                 </div>
             </div>
             <div class="postcard-footer">
                 <input type="submit" value="Send My Postcard"/>
             </div>
-        </div>
+        </form>
     
     </section>
     
